--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --watch '**/*.js' index.js",
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -22,6 +23,14 @@
     "underscore": "^1.9.1"
   },
   "devDependencies": {
-    "nodemon": "^1.18.4"
+    "@types/node": "^10.10.3",
+    "@types/yargs": "^12.0.0",
+    "gulp": "^3.9.1",
+    "gulp-cli": "^2.0.1",
+    "gulp-install": "^1.1.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "nodemon": "^1.18.4",
+    "typescript": "^2.9.2",
+    "yargs": "^12.0.2"
   }
 }
