--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "dotenv": "^6.0.0",
     "getenv": "^0.7.0",
     "moment": "^2.22.2",
-    "steamapi": "^2.0.2",
-    "underscore": "^1.9.1"
+    "steamapi": "^2.0.2"
   },
   "devDependencies": {
+    "@types/cron": "^1.3.0",
     "@types/node": "^10.10.3",
     "@types/yargs": "^12.0.0",
     "gulp": "^3.9.1",
