--- a/package.json
+++ b/package.json
@@ -6,31 +6,31 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --watch '**/*.js' index.js",
-    "build": "gulp",
+    "build": "gulp build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
   "license": "MIT",
   "dependencies": {
-    "cron": "^1.4.1",
-    "debug": "^4.0.1",
+    "cron": "^1.5.0",
+    "debug": "^4.1.0",
     "discord.js": "^11.4.2",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.1.0",
     "getenv": "^0.7.0",
     "moment": "^2.22.2",
     "newsapi": "^2.4.0",
-    "steamapi": "^2.0.2"
+    "steamapi": "^2.0.3"
   },
   "devDependencies": {
     "@types/cron": "^1.3.0",
-    "@types/node": "^10.10.3",
-    "@types/yargs": "^12.0.0",
-    "gulp": "^3.9.1",
+    "@types/node": "^10.12.2",
+    "@types/yargs": "^12.0.1",
+    "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
-    "nodemon": "^1.18.4",
+    "nodemon": "^1.18.5",
     "typescript": "^2.9.2",
     "yargs": "^12.0.2"
   }
