--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --watch '**/*.js' index.js",
-    "build": "gulp build",
+    "build": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -31,7 +31,7 @@
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "nodemon": "^1.18.5",
-    "typescript": "^2.9.2",
+    "typescript": "^3.2.2",
     "yargs": "^12.0.2"
   }
 }
