--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cron": "^1.5.0",
     "debug": "^4.1.0",
     "discord.js": "^11.4.2",
+    "discord.js-commando": "^0.10.0",
     "dotenv": "^6.1.0",
     "getenv": "^0.7.0",
     "moment": "^2.22.2",
