--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Discord BOT that show Steam news for games",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon --watch '**/*.js' index.js",
-    "build": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "npm-run-all dev:*",
+    "dev:compile": "tsc",
+    "dev:run": "node dist/index.js",
+    "build": "gulp"
   },
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
@@ -21,17 +21,19 @@
     "getenv": "^0.7.0",
     "moment": "^2.22.2",
     "newsapi": "^2.4.0",
+    "node-emoji": "^1.8.1",
     "steamapi": "^2.0.3"
   },
   "devDependencies": {
     "@types/cron": "^1.3.0",
     "@types/node": "^10.12.2",
+    "@types/node-emoji": "^1.8.0",
     "@types/yargs": "^12.0.1",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
-    "nodemon": "^1.18.5",
+    "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2",
     "yargs": "^12.0.2"
   }
