--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "moment": "^2.22.2",
     "newsapi": "^2.4.0",
     "node-emoji": "^1.8.1",
-    "steamapi": "^2.0.3"
+    "opusscript": "0.0.6",
+    "steamapi": "^2.0.3",
+    "youtube-audio-stream": "^0.3.0"
   },
   "devDependencies": {
     "@types/cron": "^1.3.0",
