--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Discord BOT that show Steam news for games",
   "main": "index.js",
   "scripts": {
+    "lint": "tslint -c tslint.json src/**/*.ts",
     "dev": "npm-run-all dev:*",
     "dev:compile": "tsc",
     "dev:run": "node dist/index.js",
@@ -36,6 +37,7 @@
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "npm-run-all": "^4.1.5",
+    "tslint": "^5.12.0",
     "typescript": "^3.2.2",
     "yargs": "^12.0.2"
   }
