--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "tslint -c tslint.json src/**/*.ts",
-    "dev": "npm-run-all dev:*",
-    "dev:compile": "tsc",
-    "dev:run": "node dist/index.js",
+    "dev": "cross-env DEBUG=* tsnd src/index.ts",
     "build": "gulp"
   },
   "keywords": [],
@@ -32,11 +30,13 @@
     "@types/node": "^10.12.2",
     "@types/node-emoji": "^1.8.0",
     "@types/yargs": "^12.0.1",
+    "cross-env": "^5.2.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
     "npm-run-all": "^4.1.5",
+    "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
     "yargs": "^12.0.2"
