--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "lint": "tslint -c tslint.json src/**/*.ts",
     "dev": "cross-env DEBUG=* tsnd src/index.ts",
-    "build": "gulp"
+    "build": "gulp",
+    "test": "ts-mocha src/**/*.test.ts",
+    "test:coverage": "nyc ts-mocha src/**/*.test.ts"
   },
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
@@ -26,16 +28,22 @@
     "youtube-audio-stream": "^0.3.0"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.7",
     "@types/cron": "^1.3.0",
     "@types/node": "^10.12.2",
     "@types/node-emoji": "^1.8.0",
     "@types/yargs": "^12.0.1",
+    "chai": "^4.2.0",
     "cross-env": "^5.2.0",
     "gulp": "^4.0.0",
     "gulp-cli": "^2.0.1",
     "gulp-install": "^1.1.0",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "mocha": "^6.1.4",
+    "mocha-typescript": "^1.1.17",
     "npm-run-all": "^4.1.5",
+    "nyc": "^14.1.1",
+    "ts-mocha": "^6.0.0",
     "ts-node-dev": "^1.0.0-pre.39",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2",
