--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "src/**/*.ts"
   ],
   "compilerOptions": {
+    "strict": true,
     "experimentalDecorators": true,
     "outDir": "dist",
     "sourceMap": true,
