--- a/package.json
+++ b/package.json
@@ -10,6 +10,18 @@
     "test": "ts-mocha src/**/*.test.ts",
     "test:coverage": "nyc ts-mocha src/**/*.test.ts"
   },
+  "nyc": {
+    "extension": [
+      ".ts"
+    ],
+    "exclude": [
+      "**/*.d.ts",
+      "**/*.js",
+      "**/*.test.ts",
+      "**/index.ts"
+    ],
+    "all": true
+  },
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
   "license": "MIT",
@@ -28,8 +40,12 @@
     "youtube-audio-stream": "^0.3.0"
   },
   "devDependencies": {
+    "@fluffy-spoon/substitute": "^1.88.0",
     "@types/chai": "^4.1.7",
     "@types/cron": "^1.3.0",
+    "@types/debug": "^4.1.4",
+    "@types/dotenv": "^6.1.1",
+    "@types/getenv": "^0.7.0",
     "@types/node": "^10.12.2",
     "@types/node-emoji": "^1.8.0",
     "@types/yargs": "^12.0.1",
