--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "discord.js": "^12.1.1",
     "discord.js-commando": "^0.10.0",
     "dotenv": "^8.2.0",
-    "getenv": "^1.0.0",
+    "env-var": "^6.0.4",
     "moment": "^2.24.0",
     "newsapi": "^2.4.0",
     "node-emoji": "^1.10.0",
@@ -32,7 +32,6 @@
     "@types/cron": "^1.7.2",
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
-    "@types/getenv": "^1.0.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.11.1",
     "@types/node-emoji": "^1.8.1",
