--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "lint": "tslint -c tslint.json src/**/*.ts",
     "dev": "cross-env DEBUG=* tsnd src/index.ts",
-    "build": "gulp",
+    "build": "rollup -c",
     "test": "jest",
     "test:coverage": "jest --coverage"
   },
@@ -14,35 +14,40 @@
   "author": "Sylvain VISTE (Fanged Hex)",
   "license": "MIT",
   "dependencies": {
+    "@abraham/reflection": "^0.7.0",
+    "@discordjs/opus": "^0.1.0",
     "cron": "^1.8.2",
     "debug": "^4.1.1",
-    "discord.js": "^12.1.1",
-    "discord.js-commando": "^0.10.0",
+    "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "env-var": "^6.0.4",
+    "inversify": "^5.0.1",
     "moment": "^2.24.0",
     "newsapi": "^2.4.0",
     "node-emoji": "^1.10.0",
-    "opusscript": "0.0.7",
+    "sodium": "^3.0.2",
     "steamapi": "^2.0.7",
-    "youtube-audio-stream": "^0.3.5"
+    "ytdl-core": "^2.1.0"
   },
   "devDependencies": {
-    "@fluffy-spoon/substitute": "^1.124.0",
+    "@fluffy-spoon/substitute": "^1.130.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
+    "@rollup/plugin-typescript": "^4.1.1",
     "@types/cron": "^1.7.2",
     "@types/debug": "^4.1.5",
     "@types/dotenv": "^8.2.0",
     "@types/jest": "^25.2.1",
-    "@types/node": "^13.11.1",
+    "@types/node": "^13.13.0",
     "@types/node-emoji": "^1.8.1",
     "@types/yargs": "^15.0.4",
     "cross-env": "^7.0.2",
-    "gulp": "^4.0.2",
-    "gulp-cli": "^2.2.0",
-    "gulp-install": "^1.1.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
     "jest": "^25.3.0",
-    "ts-jest": "^25.3.1",
+    "jest-mock-extended": "^1.0.8",
+    "rollup": "^2.6.1",
+    "rollup-plugin-progress": "^1.1.1",
+    "ts-jest": "^25.4.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.1",
     "typescript": "^3.8.3",
