--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "Discord BOT that show Steam news for games",
-  "main": "index.js",
+  "main": "dist/app.js",
   "scripts": {
     "lint": "tslint -c tslint.json src/**/*.ts",
     "dev": "cross-env DEBUG=* tsnd src/index.ts",
@@ -16,32 +16,23 @@
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "@discordjs/opus": "^0.1.0",
-    "cron": "^1.8.2",
     "debug": "^4.1.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "env-var": "^6.0.4",
     "inversify": "^5.0.1",
-    "moment": "^2.24.0",
-    "newsapi": "^2.4.0",
-    "node-emoji": "^1.10.0",
     "sodium": "^3.0.2",
     "steamapi": "^2.0.7",
     "ytdl-core": "^2.1.0"
   },
   "devDependencies": {
-    "@fluffy-spoon/substitute": "^1.130.0",
     "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
-    "@types/cron": "^1.7.2",
     "@types/debug": "^4.1.5",
-    "@types/dotenv": "^8.2.0",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
-    "@types/node-emoji": "^1.8.1",
-    "@types/yargs": "^15.0.4",
     "cross-env": "^7.0.2",
     "jest": "^25.3.0",
     "jest-mock-extended": "^1.0.8",
@@ -50,7 +41,6 @@
     "ts-jest": "^25.4.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslint": "^6.1.1",
-    "typescript": "^3.8.3",
-    "yargs": "^15.3.1"
+    "typescript": "^3.8.3"
   }
 }
