--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,15 +16,15 @@ build:
 deploy master:
   stage: deploy
   script:
-    - docker build -t registry/discordbot:latest .
-    - docker push registry/discordbot:latest
+    - docker build -t registry:5000/discordbot:latest .
+    - docker push registry:5000/discordbot:latest
   only:
     - master
 
 deploy dev:
   stage: deploy
   script:
-    - docker build -t registry/discordbot:rc .
-    - docker push registry/discordbot:rc
+    - docker build -t registry:5000/discordbot:rc .
+    - docker push registry:5000/discordbot:rc
   only:
     - dev
