--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "private": true,
   "name": "discord-bot",
   "version": "1.0.0",
   "description": "Discord BOT that show Steam news for games",
@@ -17,11 +18,13 @@
   "dependencies": {
     "@abraham/reflection": "^0.7.0",
     "@discordjs/opus": "^0.1.0",
+    "@fangedhex/eventbus": "^1.0.0-rc.1",
     "debug": "^4.1.1",
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "env-var": "^6.0.4",
     "inversify": "^5.0.1",
+    "reflect-metadata": "^0.1.13",
     "sodium": "^3.0.2",
     "steamapi": "^2.0.7",
     "ytdl-core": "^2.1.0"
