--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "reflect-metadata": "^0.1.13",
     "sodium": "^3.0.2",
     "steamapi": "^2.0.7",
+    "typeorm": "^0.2.25",
     "ytdl-core": "^2.1.0"
   },
   "devDependencies": {
