--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "tslint -c tslint.json src/**/*.ts",
     "dev": "cross-env DEBUG=* tsnd src/index.ts",
     "build": "rollup -c",
+    "start": "node dist/bot.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:dev": "jest --watch --coverage"
@@ -29,9 +30,7 @@
     "ytdl-core": "^2.1.0"
   },
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.1.0",
     "@rollup/plugin-json": "^4.0.3",
-    "@rollup/plugin-node-resolve": "^7.1.3",
     "@rollup/plugin-typescript": "^4.1.1",
     "@types/debug": "^4.1.5",
     "@types/jest": "^25.2.1",
