--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,12 @@
 {
-  "include": [
-    "src/**/*.ts",
-    "test/**/*.ts"
-  ],
   "compilerOptions": {
+    "target": "es5",
+    "moduleResolution": "node",
     "strict": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "outDir": "dist",
-    "sourceMap": true,
-    "target": "es6",
-    "module": "commonjs",
-    "lib": [
-      "es6"
-    ],
-    "types": [
-      "node",
-      "jest"
-    ]
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
