--- a/package.json
+++ b/package.json
@@ -16,6 +16,11 @@
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
   "license": "MIT",
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
     "@fangedhex/eventbus": "^1.0.0-rc.1",
@@ -30,12 +35,15 @@
     "ytdl-core": "^2.1.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^9.1.2",
+    "@commitlint/config-angular": "^9.1.2",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-typescript": "^4.1.1",
     "@types/debug": "^4.1.5",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
     "cross-env": "^7.0.2",
+    "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-mock-extended": "^1.0.8",
     "rollup": "^2.6.1",
