--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "cross-env": "^7.0.2",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
-    "jest-mock-extended": "^1.0.8",
+    "jest-mock-extended": "^1.0.10",
     "rollup": "^2.6.1",
     "rollup-plugin-progress": "^1.1.1",
     "ts-jest": "^25.4.0",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tslib": "^2.0.1",
     "tslint": "^6.1.1",
-    "typescript": "^3.8.3"
+    "typescript": "^3.9.4"
   }
 }
