--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Discord BOT that show Steam news for games",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "tslint -c tslint.json src/**/*.ts",
+    "lint": "eslint . --ext .js,.ts",
     "dev": "cross-env DEBUG=* tsnd src/index.ts",
     "build": "rollup -c",
     "start": "node dist/bot.js",
@@ -42,16 +42,21 @@
     "@types/debug": "^4.1.5",
     "@types/jest": "^25.2.1",
     "@types/node": "^13.13.0",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "@typescript-eslint/parser": "^3.10.1",
     "cross-env": "^7.0.2",
+    "eslint": "^7.7.0",
+    "eslint-config-prettier": "^6.11.0",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-mock-extended": "^1.0.10",
+    "prettier": "^2.1.1",
     "rollup": "^2.6.1",
     "rollup-plugin-progress": "^1.1.1",
     "ts-jest": "^25.4.0",
     "ts-node-dev": "^1.0.0-pre.44",
     "tslib": "^2.0.1",
     "tslint": "^6.1.1",
-    "typescript": "^3.9.4"
+    "typescript": "^4.0.2"
   }
 }
