--- a/package.json
+++ b/package.json
@@ -11,15 +11,22 @@
     "start": "node dist/bot.js",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "test:dev": "jest --watch --coverage"
+    "test:dev": "jest --watch --coverage",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "Sylvain VISTE (Fanged Hex)",
   "license": "MIT",
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
+  },
+  "lint-staged": {
+    "*.ts": [
+      "eslint --fix"
+    ]
   },
   "dependencies": {
     "@discordjs/opus": "^0.1.0",
@@ -28,6 +35,7 @@
     "discord.js": "^12.2.0",
     "dotenv": "^8.2.0",
     "env-var": "^6.0.4",
+    "mysql": "^2.18.1",
     "reflect-metadata": "^0.1.13",
     "sodium": "^3.0.2",
     "steamapi": "^2.0.7",
@@ -47,9 +55,11 @@
     "cross-env": "^7.0.2",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.4",
     "husky": "^4.2.5",
     "jest": "^25.3.0",
     "jest-mock-extended": "^1.0.10",
+    "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
     "rollup": "^2.6.1",
     "rollup-plugin-progress": "^1.1.1",
